--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,16 +3,20 @@ name = "doubletime"
 version = "0.1.0"
 edition = "2021"
 authors = ["Matthew R. Carbone"]
+include = ["src/default_config.yaml"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.0", features = ["derive"] }
-yaml-rust = { version = "0.4" }
-log =  { version = "0.4.20" }
-pretty_env_logger =  { version = "0.5.0" }
 chrono = { version = "0.4.31" }
-serde_json = { version = "1.0" }
-serde = { version = "1.0", features = ["derive"] }
-uuid = { version = "0.8.1", features = ["v4"] }
+clap = { version = "4.0", features = ["derive"] }
+edit = { version = "0.1.4" }
 homedir = { version = "0.2.1" }
+log = { version = "0.4.20" }
+open = { version = "5.0.0" }
+pretty_env_logger =  { version = "0.5.0" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0" }
+serde_yaml = { version = "0.9" }
+uuid = { version = "0.8.1", features = ["v4"] }
+
